# WorldCupPrediction

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
configs/: backtest.yaml  base.yaml  calibration.yaml  catboost.yaml  elo.yaml  features.yaml  models.yaml  mvp.yaml  providers.yaml  stacking.yaml
data/aliases/: alias_registry.json
data/fixtures/: availability.json  matches.csv  odds.csv
data/raw/sources/: lock.json  registry.json
docs/: anti-leakage.md  architecture.md  data-contracts.md  evaluation.md  modeling.md
infra/: Dockerfile
infra/postgres/: init.sql
migrations/: env.py
migrations/versions/: 0001_init.py
reports/: REAL_DATA_BOOTSTRAP_REPORT.md
scripts/: generate_synthetic_dataset.py  init_db.py  real_data_baseline_report.py  run_demo.py
src/football_advance_predictor/: __init__.py
src/football_advance_predictor/app/: __init__.py
src/football_advance_predictor/backtesting/: __init__.py  backtest_runner.py  symmetry.py
src/football_advance_predictor/cli/: main.py
src/football_advance_predictor/core/: __init__.py  config.py  hashing.py  logging.py  time.py
src/football_advance_predictor/data/: __init__.py
src/football_advance_predictor/db/: __init__.py  base.py  models.py  session.py
src/football_advance_predictor/domain/: __init__.py
src/football_advance_predictor/features/: __init__.py  v1_features.py
src/football_advance_predictor/ledger/: __init__.py  ledger_service.py
src/football_advance_predictor/models/: __init__.py  catboost_gate.py
src/football_advance_predictor/schemas/: __init__.py  (+6 more)
tests/: conftest.py
tests/integration/: test_anti_leakage.py  test_api_endpoints.py  test_api_smoke.py  test_cli.py  test_end_to_end.py  test_reproducibility.py
tests/unit/: test_alias_registry.py  test_calibrator.py  test_elo_engine.py  test_golden_labels.py  test_knockout_manifest.py  test_logistic_baseline.py  test_market.py  test_martj42_provider.py  test_metric_consistency.py  test_openfootball_provider.py  test_optional_odds.py  test_schemas.py  test_source_downloader.py  test_source_registry.py  test_splits_and_metrics.py  test_team_resolver.py  test_time_and_hashing.py  test_v1_features.py
(+75 files in other folders)
