[project]
name = "football-advance-predictor"
version = "0.1.0"
description = "Reproducible football knockout-match advance-probability prediction system."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Football Advance Predictor Maintainers" }]
license = { text = "MIT" }
keywords = ["football", "soccer", "prediction", "knockout", "elo", "catboost", "calibration"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "catboost>=1.2.0",
    "matplotlib>=3.9.0",
    "typer>=0.12.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML",
    "httpx>=0.27.0",
    "freezegun>=1.5.0",
]

[project.scripts]
football = "football_advance_predictor.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/football_advance_predictor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/football_advance_predictor", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]
"src/**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel.shared-data]
"configs" = "configs"
"infra" = "infra"
